Invalidate fixed-pos elements & descendants on scroll w/filters that change pixels.

BUG=610287

Review-Url: https://codereview.chromium.org/2091603002
Cr-Commit-Position: refs/heads/master@{#401712}

Former-commit-id: 17022a51ce7410328f50289828828bd1a385b32b